auto: introduce category in JUnit